clang/test/BSC/Negative/Ownership/Borrow/borrow_cast_void_pointer/borrow_cast_void_pointer.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test() {
  int a = 1;
  int b = 1;
  int * _Borrow p1  = &mut a;
  const int * _Borrow p2  = &const b;
  // T --> void
  void * _Borrow v1 = p1; // legal
  void * _Borrow v2 = (void * _Borrow)p1; // legal
  (const void * _Borrow)p1; // expected-warning {{expression result unused}}
  const void * _Borrow v3 = p2; // legal
  const void * _Borrow v4 = (const void * _Borrow)p2; // legal
  (void * _Borrow)p2; // expected-warning {{expression result unused}}
  v1 = v3; // expected-error {{incompatible borrow types, cannot cast 'const void *_Borrow' to 'void *_Borrow'}}
  v3 = v1; // allow re-borrowing

  // void --> T
  int * _Borrow p3 = (int * _Borrow)v1; // legal
  const int * _Borrow p4 = (const int * _Borrow)v3; // legal
  int * _Borrow p5 = v1; // expected-error {{incompatible borrow types, cannot cast 'void *_Borrow' to 'int *_Borrow'}}
  const int * _Borrow p6 = v3; // expected-error {{incompatible borrow types, cannot cast 'const void *_Borrow' to 'const int *_Borrow'}}
  p3 = v1; // expected-error {{incompatible borrow types, cannot cast 'void *_Borrow' to 'int *_Borrow'}}
  p4 = v3; // expected-error {{incompatible borrow types, cannot cast 'const void *_Borrow' to 'const int *_Borrow'}}
  p3 = p4; // expected-error {{incompatible borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
  p4 = p3; // allow re-borrowing
  p3 = (int * _Borrow)v1; // legal
  p4 = (const int * _Borrow)v3; // legal


  _Safe {
     // T --> void
     void * _Borrow v5 = (void * _Borrow)p1; // expected-error {{conversion from type 'int *_Borrow' to 'void *_Borrow' is forbidden in the safe zone}}
     const void * _Borrow v6 = (const void * _Borrow)p2; // expected-error {{conversion from type 'const int *_Borrow' to 'const void *_Borrow' is forbidden in the safe zone}}
     v5 = p1; // expected-error {{conversion from type 'int *_Borrow' to 'void *_Borrow' is forbidden in the safe zone}}
     v6 = p2; // expected-error {{conversion from type 'const int *_Borrow' to 'const void *_Borrow' is forbidden in the safe zone}}

     // void --> T
     (int * _Borrow)v5; // expected-error {{conversion from type 'void *_Borrow' to 'int *_Borrow' is forbidden in the safe zone}}
     (const int * _Borrow)v6; // expected-error {{conversion from type 'const void *_Borrow' to 'const int *_Borrow' is forbidden in the safe zone}}
  }
}